Closed
Bug 733867
Opened 13 years ago
Closed 13 years ago
Build failure with gcc-4.7.0rc1: "nsMsgFolderCompactor.cpp ... error: unable to find string literal operator ‘operator"" ..."
Categories
(MailNews Core :: Build Config, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 13.0
People
(Reporter: ojab, Assigned: ojab)
References
()
Details
Attachments
(1 file)
18.51 KB,
patch
|
Callek
:
review+
|
Details | Diff | Splinter Review |
gcc (GCC) 4.7.0 20120302 (prerelease):
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp: In member function ‘virtual nsresult nsFolderCompactState::OnStopRequest(nsIRequest*, nsISupports*, nsresult)’:
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:630:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp: In member function ‘virtual nsresult nsFolderCompactState::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, PRUint32, PRUint32)’:
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:797:51: error: unable to find string literal operator ‘operator"" MSG_LINEBREAK’
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:851:29: error: unable to find string literal operator ‘operator"" MSG_LINEBREAK’
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:851:55: error: unable to find string literal operator ‘operator"" MSG_LINEBREAK’
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp: In member function ‘nsresult nsOfflineStoreCompactState::CopyNextMessage(bool&)’:
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:905:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:950:24: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp: In member function ‘virtual nsresult nsFolderCompactState::EndCopy(nsISupports*, nsresult)’:
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:1112:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp: In member function ‘virtual nsresult nsOfflineStoreCompactState::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, PRUint32, PRUint32)’:
/sources/comm-central/mailnews/base/src/nsMsgFolderCompactor.cpp:1219:31: error: unable to find string literal operator ‘operator"" CRLF’
make[8]: *** [nsMsgFolderCompactor.o] Error 1
Updated•13 years ago
|
Component: General → Build Config
QA Contact: general → build-config
Comment 1•13 years ago
|
||
It looks like that compiler doesn't know (anymore) how to concatenate 2 literal strings.
I have no idea why.
Summary: Build failure with gcc-4.7.0rc1 Build failure with gcc-4.7.0rc1 → Build failure with gcc-4.7.0rc1: "nsMsgFolderCompactor.cpp ... error: unable to find string literal operator ‘operator"" ..." Build failure with gcc-4.7.0rc1: "nsMsgFolderCompactor.cpp ... error: unable to find string literal operator ‘operator"" ..."
Comment 2•13 years ago
|
||
Maybe it needs a space between the "From " and CLRF, i.e. "From " CRLF.
Product: Thunderbird → MailNews Core
QA Contact: build-config → build-config
Yep,
- m_fileStream->Write("From "CRLF, 7, &bytesWritten);
+ m_fileStream->Write("From " CRLF, 7, &bytesWritten);
has fixed CRLF error.
Updated•13 years ago
|
Assignee: nobody → ojab
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•13 years ago
|
Attachment #604734 -
Flags: review?(mbanner)
Comment 5•13 years ago
|
||
Comment on attachment 604734 [details] [diff] [review]
Complete patch
I'm not technically a reviewer here, but I am for build-config issues in general which this is.
I'll save Mark the trouble and r+ this. I didn't search the code for any non-patched places that could/should be fixed, but I did look at this whole patch and every touched line is fine.
Attachment #604734 -
Flags: review?(mbanner) → review+
Updated•13 years ago
|
Keywords: checkin-needed
Comment 6•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
Updated•13 years ago
|
Flags: in-testsuite-
You need to log in
before you can comment on or make changes to this bug.
Description
•