Bug 733867 - Build failure with gcc-4.7.0rc1: nsMsgFolderCompactor.cpp ... error: unable to find string literal operator"" ... r=Callek